--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:prueba12345.database.windows.net,1433;Initial Catalog=prueba12345;Persist Security Info=False;User ID=prueba12345;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
+
+
